--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A tile generator for mapping applications.",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "rm -fr dist && tsc",
     "prepublish": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "tsc": "tsc"
